syntax = "proto3";

option java_package = "edu.shtoiko.grpc";
option java_outer_classname = "TerminalServiceProto";

message WithdrawRequest {
  int64 AccountNumber = 1;
  int32 pinCode = 2;
  string currencyCode = 3;
  int64 amount = 4;
}

message WithdrawResponse {
  string message = 1;
  double balance = 2;
}

message StatusReport {
  string terminalId = 1;
  string banknotesCode = 2;
  map<string, int32> banknotes = 3;
}

message StatusResponse {
  string message = 1;
}

message LogMessage {
  string level = 1;
  string message = 2;
  string timestamp = 3;
}

message LogResponse {
  string message = 1;
}

service TerminalService {
  rpc Withdraw(WithdrawRequest) returns (WithdrawResponse);
  rpc ReportStatus(stream StatusReport) returns (StatusResponse);
  rpc SendLogs(stream LogMessage) returns (LogResponse);
}